PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add LEDE external dependency handling support
phodevi: Motherboard detection support on BSD using smbios.planar.product
phodevi: hw.cpu_topology_core_ids support for physical core count on BSD

Phoronix Test Suite 7.6.0 Milestone 1
10 October 2017

pts-core: Add external dependency handling for MidnightBSD / mport
pts-core: Improved handling of IP/MAC detection to try to figure out the default interface
pts-core: Wake-On-LAN handling detection improvements
phoromatic: Try using systemctl poweroff first when trying to turn off a system
phodevi: Add memory.temp sensor
phodevi: Fixed k10temp CPU temperature reporting
phodevi: Add IPMI ambient temperature support
phodevi: Some CPU/GPU temperature reporting improvements
phodevi: Ignore reporting 'MS-DOS FAT32' EFI file-system on macOS
phodevi: Add Bcache reporting support
phodevi: Add APFS Apple File-System detection on macOS
phodevi: Tweaks for macOS High Sierra
phodevi: Restructure CPU core/thread reporting in system tables
perf_per_dollar: Add "phoronix-test-suite perf_per_dollar.add <result file>" to allow perf-per-dollar graphs to be added after the fact

Phoronix Test Suite 7.4.0-Tynset
19 September 2017

pts-core: Improve command documentation categories/organization
pts-core: Fix install time reporting from the info sub-command when passing a test profile
pts-core: Add network-info sub-command
pts-core: Java external dependency updates
pts-core: Add maven external dependency
phodevi: NVMe disk reporting on BSDs
pts_Graph: Allow line graphs to have adjustable floor/bottom to better present data on graph

Phoronix Test Suite 7.4.0 Milestone 4
11 September 2017

pts-core: Report on updated OpenBenchmarking.org index update when new/updated tests are introduced
pts-core: Add TEST_EXEC_PREPEND support
pts-core: Ensure XAUTHORITY gets passed if relevant to test execution