@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Add LEDE external dependency handling support
 phodevi: Motherboard detection support on BSD using smbios.planar.product
 phodevi: hw.cpu_topology_core_ids support for physical core count on BSD
+phodevi: Allow BSD GPU detection via pciconf data
 
 Phoronix Test Suite 7.6.0 Milestone 1
 10 October 2017
